Version 0.3.9 Beta