@@ -23,8 +23,8 @@ version '0.4.0'
 
 javafx {
 	version = "14"
-	modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
-	// modules = [ 'javafx.controls', 'javafx.fxml','javafx.graphics','javafx.base' ]
+	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
+	// modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics','javafx.base' ]
 }
 
 dependencies {
@@ -33,6 +33,7 @@ dependencies {
 	implementation group: 'org.mozilla', name: 'rhino', version: '1.7.12'
 	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 	implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.8'
+	// implementation group: 'org.fxmisc.flowless', name: 'flowless', version: '0.6.1'
 	implementation group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.4'
 	implementation (group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1') {
 		exclude group: 'org.hamcrest', module: 'hamcrest-core'
@@ -60,20 +61,31 @@ compileJava {
 	])
 } */
 
+run {
+	// jvmArgs '--add-exports', 'javafx.graphics/javafx.scene.layout=org.beuwi.simulator'
+}
+
 jlink {
-	// 없으면 jlink task시 오류남
-	mergedModule {
-		requires "java.xml"
-	}
 	options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+
 	launcher {
 		name = 'Mesenger Bot Simulator'
+	}
+
+	// Instructs the plugin to include all dependencies matching the given prefixes into the merged module. This method is useful when the plugin should handle one or more modular jars as non-modular
+
+	forceMerge 'javafx'
+
+	mergedModule {
+		requires 'java.xml'
+		requires 'java.desktop'
 	}
 
 	/* installerOptions = [
 			'--file-associations', 'src/main/resources/associations.properties',
 			'--app-version', version,
 	] */
+
 	jpackage {
 		imageOptions += ['--icon', 'src/main/resources/icons/program.ico']
 	}
